kubernetes/apps/nginx/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nginx
  labels:
    name: nginx
    pod-security.kubernetes.io/enforce: privileged
